--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,27 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Blog entry</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.author %></td>
-        <td><%= post.blog_entry %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <br>
+<p><%= link_to 'New Post', new_post_path, class: "btn btn-primary" %></p>
+<br>
+<div class="row">
+  <% @posts.each do |post| %>
+    <div class="col-md-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3><%= post.title.truncate(18) %></h3>
+          <p>by <%= post.author %></p>
+        </div>
+        <div class="panel-body">
+          <p><%= post.blog_entry.truncate(150) %></p>
+        </div>
+        <div class="panel-footer">
+          <%= link_to  "Show", post, class:"btn btn-info" %>
+          <%= link_to  "Edit", edit_post_path(post), class:"btn btn-warning" %>
+          <%= link_to "Destroy", post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
-<%= link_to 'New Post', new_post_path %>
