--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,17 +11,20 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :author %>
-    <%= form.text_field :author %>
+    <%= form.text_field :author, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :comment_entry %>
-    <%= form.text_area :comment_entry %>
+    <%= form.text_area :comment_entry, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= form.hidden_field :post_id, value: @post.id %>
+  </div>
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Add Comment" %>
   </div>
 <% end %>
