--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,3 +17,19 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+<br>
+<br>
+<div id="comments">
+  <%= render  "comments/form", comment: @comment %>
+</div>
+<br>
+<% @post.comments.each do |comment| %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <p><%= comment.author %> said...</p>
+    </div>
+    <div class="panel-body">
+      <p><%= comment.comment_entry %></p>
+    </div>
+  </div>
+<% end %>
