--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', post: @post %>
 
 <%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<span class="glyphicon glyphicon-arrow-left"></span><%= link_to ' Back', posts_path %>
