--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path %>
+<span class="glyphicon glyphicon-arrow-left"></span><%= link_to ' Back', posts_path %>
