--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<span class="glyphicon glyphicon-arrow-left"></span><%= link_to ' Back', posts_path %>
 <br>
 <br>
 <div id="comments">
