--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
+<h2>Welcome <%= current_user.email %></h2>
+<h2>Posts</h2>
 <br>
 <p><%= link_to 'New Post', new_post_path, class: "btn btn-primary" %></p>
 <br>
@@ -9,7 +9,7 @@
     <div class="col-md-3">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3><%= post.title.truncate(18) %></h3>
+          <h3><%= post.title.truncate(15) %></h3>
           <p>by <%= post.author %></p>
         </div>
         <div class="panel-body">
