--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,19 +12,18 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :author %>
-    <%= form.text_field :author, class: "form-control" %>
+    <%= form.text_field :user_id, value: current_user.id %>
   </div>
 
   <div class="form-group">
     <%= form.label :comment_entry %>
-    <%= form.text_area :comment_entry, class: "form-control" %>
+    <%= form.text_area :comment_entry, placeholder: "Tell Me Something...", class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= form.hidden_field :post_id, value: @post.id %>
   </div>
   <div class="form-group">
-    <%= form.submit "Add Comment", class: "form-control"%>
+    <%= form.submit "Add Comment", class: "btn btn-primary"%>
   </div>
 <% end %>
