Applied username to post index and show pages, updated navbar with edit profile option

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <h3><%= post.title.truncate(15) %></h3>
-          <p>by <%= post.user.email %></p>
+          <p>by <%= post.user.username %></p>
         </div>
         <div class="panel-body">
           <p><%= post.blog_entry.truncate(150) %></p>
