--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -53,6 +53,7 @@
           </ul> -->
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
+          <li><%= link_to  "Edit Profile", edit_user_registration_path, class:"btn btn-primary" %></li>
           <li>
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
           </li>
